# gemma3-cpp

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.ps1  build.sh  download-model.ps1  download-model.sh  run.ps1  run.sh  test.ps1  test.sh
src/: main.cpp
tests/: smoke.py
